open-api: default-value is not detected
- fix #3835